Remove dep on internal sun codec